--- a/RMX1901.md
+++ b/RMX1901.md
@@ -1,11 +1,7 @@
+^ion
+ion-2.3.b
 
-^ion ion-2.3.b
-
-Changelog (2.3.b) 31/01/2020:
-
-- version bumped to 2.3b
-- fixed bt earphones
-- fixed aod brightness
+ Changelog (2.3.b) 31/01/2020:
 - Added RGB Accent Color picker
 - Added ARGB QS header color picker
 - Added RGB QS Panel Color picker
@@ -17,3 +13,5 @@ Changelog (2.3.b) 31/01/2020:
 - Added QS System Info
 - Added Lockscreen Date styles
 - Allow selecting Lockscreen art blur to 0
+- Fixed BT earphones
+- Fixed AOD brightness
