--- a/RMX1901.md
+++ b/RMX1901.md
@@ -1,17 +1,24 @@
 ^ion
-ion-2.3.b
+ion-2.4.a
 
- Changelog (2.3.b) 31/01/2020:
-- Added RGB Accent Color picker
-- Added ARGB QS header color picker
-- Added RGB QS Panel Color picker
-- Added option to hide Lockscreen Clock & Date
-- Added FOD icon picker
-- Added Burn-in Protection toggle
-- Added option to allow to use VPN through tethering
-- Added option to hide cutout
-- Added QS System Info
-- Added Lockscreen Date styles
-- Allow selecting Lockscreen art blur to 0
-- Fixed BT earphones
-- Fixed AOD brightness
+- version bumped to 2.4.a
+- Fix proximity blinking in few apps
+- Highly improved Fingerprint Speed
+- Added vibration slider for master vibration control (Settings -> RealmeParts)
+- Added Coral's Build Fingerprint (Safety net will pass without safety patch)
+- February Security Patch
+- Added Statusbar clock custom color
+- Added Lockscreen ownerinfo fonts & size
+- Added extended screenshot
+- Added some more Lockscreen clock styles
+- Added Source sans pro font style
+- Added new custom text clock
+- Added custom text clock customizations
+- Added new improved Ambient Edge Pulse
+- Added more edge pulse customizations
+- Added Dynamic Immersive mode tile
+- Fixed IME selector toggle
+- Improved screenshot tile
+- Improved partial screenshot
+- Improved Lockscreen weather
+- other bug fixes & improvements
