X00T: ion-2.5.a 'changelog update'
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/X00T.md
+++ b/X00T.md
@@ -1,20 +1,23 @@
 ^ion
-ion-2.4.a
+ion-2.5.a
 
  Changelog:
-- February Security Patch
-- Added Statusbar clock custom color
-- Added Lockscreen ownerinfo fonts & size
-- Added extended screenshot
-- Added some more Lockscreen clock styles
-- Added Source sans pro font style
-- Added new custom text clock
-- Added custom text clock customizations
-- Added new improved Ambient Edge Pulse
-- Added more edge pulse customizations
-- Added Dynamic Immersive mode tile
-- Fixed IME selector toggle
-- Improved screenshot tile
-- Improved partial screenshot
-- Improved Lockscreen weather
+- April Security Patch
+- Added Screen Stabilization
+- Added option to block back gesture on IME
+- Added haptic feedback on back gesture
+- Added Android R style screen record dialog
+- Added panel for some QS tiles
+- Added Ringtone vibration patterns
+- Fixed overlapping Carrier label & heads up text
+- Fixed SystemUI crash on high resolution QS header images
+- Fixed custom lockscreen wallpaper
+- Improved QS Tiles layout
+- updated GApps
 - other bug fixes & improvements
+
+ Device Changes:
+- Reverted to Source Built Audio HAL: Fixes Audio in some Apps
+- Improved speaker volume
+- Merged 061
+- Latest Stardust
