--- a/RMX1901.md
+++ b/RMX1901.md
@@ -1,24 +1,19 @@
 ^ion
-ion-2.4.a
+ion-2.5.a
 
-- version bumped to 2.4.a
-- Fix proximity blinking in few apps
-- Highly improved Fingerprint Speed
-- Added vibration slider for master vibration control (Settings -> RealmeParts)
-- Added Coral's Build Fingerprint (Safety net will pass without safety patch)
-- February Security Patch
-- Added Statusbar clock custom color
-- Added Lockscreen ownerinfo fonts & size
-- Added extended screenshot
-- Added some more Lockscreen clock styles
-- Added Source sans pro font style
-- Added new custom text clock
-- Added custom text clock customizations
-- Added new improved Ambient Edge Pulse
-- Added more edge pulse customizations
-- Added Dynamic Immersive mode tile
-- Fixed IME selector toggle
-- Improved screenshot tile
-- Improved partial screenshot
-- Improved Lockscreen weather
+- upstreamed kernel to 4.9.219
+- Improved FP speed
+- Fixed safety net
+- April Security Patch
+- Added Screen Stabilization
+- Added option to block back gesture on IME
+- Added haptic feedback on back gesture
+- Added Android R style screen record dialog
+- Added panel for some QS tiles
+- Added Ringtone vibration pattern
+- Fixed overlapping Carrier label & heads up text
+- Fixed SystemUI crash on high resolution QS header images
+- Fixed custom lockscreen wallpaper
+- Improved QS Tiles layout
+- updated GApps
 - other bug fixes & improvements
