--- a/X00T.md
+++ b/X00T.md
@@ -1,17 +1,25 @@
 ^ion
-ion-2.6.a
+ion-2.7.a
 
  Changelog:
-- May Security Patch
-- Added battery bar
-- Added in-call vibration options
-- Added internal audio recording to screenrecord
-- Added option to select bitrate to screenrecord
-- Added R style notification section headers
-- Added AOSP accents
-- updated GApps
+- June Security Patch
+- Added QS Tile tint
+- Added QS blur and blur intensity
+- Added Wi-Fi data usage in QS header
+- Added option to swipe up on lockscreen to use face unlock
+- Added switchbar to some parts of settings
+- Fixed Apps and Notifications Settings crash on some devices
+- Fixed Lockscreen rotation toggle
+- Fixed screenshot sound issue
+- Fixed screenshot gesture unexpected behaviour
+- Improved QS header data usage
+- Revamped extended screenshot
+- updated GApps and fixed GApps related issues
 - other bug fixes & improvements
 
  Device Changes:
-- Merged 063
-- Latest Stardust
+- Fixed audio cracks in games and wapp
+- Fixed camera issues
+- Enabled d2tw
+- Added missing audio audio extensions
+- Fixed issue with audio effects
