--- a/X00T.md
+++ b/X00T.md
@@ -1,25 +1,25 @@
 ^ion
-ion-2.7.a
+ion-2.8.a
 
  Changelog:
-- June Security Patch
-- Added QS Tile tint
-- Added QS blur and blur intensity
-- Added Wi-Fi data usage in QS header
-- Added option to swipe up on lockscreen to use face unlock
-- Added switchbar to some parts of settings
-- Fixed Apps and Notifications Settings crash on some devices
-- Fixed Lockscreen rotation toggle
-- Fixed screenshot sound issue
-- Fixed screenshot gesture unexpected behaviour
-- Improved QS header data usage
-- Revamped extended screenshot
-- updated GApps and fixed GApps related issues
+- July Security Patch
+- Added per-app sensor blocker
+- Adapt screenshot sound to ringer mode
+- Added option to change navbar handle thickness
+- Added slim recent
+- Improve QS header data usage
+- Fixed QS blur when no notificaions are showing
+- updated GApps
 - other bug fixes & improvements
 
  Device Changes:
-- Fixed audio cracks in games and wapp
-- Fixed camera issues
-- Enabled d2tw
-- Added missing audio audio extensions
-- Fixed issue with audio effects
+* Fixed screen cast
+* Improved earphone audio quality
+* Fixed internal audio recording
+* Cleaned up camera blobs
+* Fixed issue with auto rotation
+* Merged 429
+* Enabled 4K and other supported profiles
+* Fixed nfc (Russian variant)
+* Scripts Cleanup
+* Minor improvements in Zenparts
