--- a/X00T.md
+++ b/X00T.md
@@ -1,25 +1,14 @@
 ^ion
-ion-2.8.a
+ion-2.9.a-EOL
 
  Changelog:
-- July Security Patch
-- Added per-app sensor blocker
-- Adapt screenshot sound to ringer mode
-- Added option to change navbar handle thickness
-- Added slim recent
-- Improve QS header data usage
-- Fixed QS blur when no notificaions are showing
-- updated GApps
-- other bug fixes & improvements
+- August Security Patch
+- Added clipboard access info
+- Fixed some bugs
+- updated some GApps
 
  Device Changes:
-* Fixed screen cast
-* Improved earphone audio quality
-* Fixed internal audio recording
-* Cleaned up camera blobs
-* Fixed issue with auto rotation
-* Merged 429
-* Enabled 4K and other supported profiles
-* Fixed nfc (Russian variant)
-* Scripts Cleanup
-* Minor improvements in Zenparts
+* Fixed FM
+* Fixed audio in back cam video recording
+* Dropped more unused blobs
+* Switched to Qti-Bt
